--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-          -d text="✅ GitHub Portfolio Refresher ran successfully! Commit pushed at $(date '+%Y-%m-%d %H:%M:%S')"
+          -d text="🤣 Arre Bhidu! GitHub Portfolio ka jugaad refresh ho gaya! ⏰ Commit gaya at $(date '+%Y-%m-%d %H:%M:%S')"
