--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Send Telegram Notification
         run: |
-          TIMESTAMP=$(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S')
+          TIMESTAMP=$(date -d '5 hours 30 minutes' '+%Y-%m-%d %H:%M:%S')
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
             -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
             -d text="🤣 Arre Bhidu! GitHub Portfolio ka jugaad refresh ho gaya! ⏰ Commit gaya at $(date '+%Y-%m-%d %H:%M:%S')"
